2016-07-20  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-add-to-list): Remove.
	(bbdb-pushnew, bbdb-pushnewq, bbdb-pushnewt): New macros.
	(bbdb-record-set-xfield, bbdb-record-set-field)
	(bbdb-merge-concat-remove-duplicates, bbdb-parse-records)
	(bbdb-change-record)
	* lisp/bbdb-com.el (bbdb-mail-aliases, bbdb-get-mail-aliases)
	(bbdb-add-mail-alias)
	* lisp/bbdb-mua.el (bbdb-update-records): Use them.

2015-11-14  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-auto-revert, bbdb-dedicated-window)
	(bbdb-default-domain, bbdb-mua-pop-up)
	(bbdb-horiz-pop-up-window-size, bbdb-xfields-sort-order)
	(bbdb-mua-summary-unification-list, bbdb-mail-avoid-redundancy)
	* lisp/bbdb-snarf.el (bbdb-snarf-address-us-country)
	(bbdb-snarf-address-eu-country)
	* lisp/bbdb-anniv.el (bbdb-anniv-alist)
	* lisp/bbdb-vm.el (bbdb/vm-virtual-real-folders)
	* lisp/bbdb-gnus.el (bbdb/gnus-score-default)
	(bbdb/gnus-split-myaddr-regexp, bbdb/gnus-split-private-field)
	(bbdb/gnus-split-public-field)
	* lisp/bbdb-sc.el (bbdb-sc-update-attrib-p): Fix defcustom.

2015-11-08  Roland Winkler  <winkler@gnu.org>
	Add new snarfing rule eu for many continental European countries.
	Improve snarfing algorithm.
	* lisp/bbdb-snarf.el (bbdb-snarf-rule-alist): Add new rule eu.
	(bbdb-snarf-phone-nanp-regexp, bbdb-snarf-postcode-us-regexp)
	(bbdb-snarf-url-regexp): Improve regexp.  Use first subexpression.
	(bbdb-snarf-mail-regexp): New variable.
	(bbdb-snarf-mail): Use it.
	(bbdb-snarf-address-us-country): New variable.
	(bbdb-snarf-address-us): Use it.  Check whether we actually
	snarfed an address.
	(bbdb-snarf-phone-eu-regexp, bbdb-snarf-postcode-eu-regexp)
	(bbdb-snarf-address-eu-country): New variables.
	(bbdb-snarf-label): Use save-match-data.
	(bbdb-snarf-phone-nanp): Use save-match-data.  Reverse order of
	snarfed phone numbers.
	(bbdb-snarf-phone-eu, bbdb-snarf-address-eu): New functions.

2015-11-08  Roland Winkler  <winkler@gnu.org>